# robotsix-cost-monitor

./: .dockerignore  .env.example  .gitignore  .markdownlint.jsonc  .npmrc  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  biome.json  coverage.json  docker-compose.yml  index.html  jsconfig.json  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  release-please-config.json  vitest.config.js  vulture_whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/actions/setup-python-ci/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deps-bump.yml  docs.yml  lint-workflows.yml  release-please.yml  release.yml  sbom.yml  scan-container.yml
.robotsix-mill/: config.yaml
.robotsix-mill/periodic/: agent_check.yaml  env_doc_sync.yaml  langfuse_cleanup.yaml  trace_review.yaml
api/: index.html
config/: config.example.json  config.schema.json  projects.example.json  projects.example.yaml  projects.schema.json
deploy/: .env.example  README.md  docker-compose.yml
docs/: api.md  index.md  modules.yaml
docs/reference/: cli.md  configuration.md
scripts/: generate_config_schema.py  test  validate_modules.py
search/: search_index.json
src/robotsix_cost_monitor/: __init__.py  _utils.py  aggregations.py  analyst.py  app.py  cli.py  config.py  exceptions.py  langfuse.py  metrics.py  openrouter.py  reconcile.py  routes.py  service.py
src/robotsix_cost_monitor/clients/: __init__.py  _http.py  langfuse.py  models.py  openrouter.py
src/robotsix_cost_monitor/web/: analyst.html  index.html
src/robotsix_cost_monitor/web/static/: analyst.js  dashboard.css  dashboard.js  shared.js
tests/: conftest.py  helpers.py  test_aggregations.py  test_analyst.py  test_app.py  test_cli.py  test_config.py  test_langfuse.py  test_openrouter.py  test_reconcile.py  test_routes.py  test_service.py
tests/clients/: test_langfuse.py  test_openrouter.py
tests/robotsix_cost_monitor/: helpers.py  test__utils.py  test_aggregations.py  test_analyst.py  test_app.py  test_cli.py  test_config.py  test_exceptions.py  test_reconcile.py  test_routes.py  test_service.py
tests/robotsix_cost_monitor/clients/: test_http.py  test_langfuse.py  test_models.py
tests/robotsix_cost_monitor/web/static/: analyst.test.js  dashboard.test.js  shared.test.js
tests/web/: analyst.test.js  dashboard.test.js  shared.test.js
