[project]
name = "robotsix-cost-monitor"
version = "0.1.0"
description = "Multi-Langfuse cost monitoring dashboard, OpenRouter↔Langfuse reconciliation, and an LLM cost-reduction analyst."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgi-correlation-id>=4.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "structlog>=24.1",
    "robotsix-yaml-config @ git+https://github.com/damien-robotsix/robotsix-yaml-config.git@0b62ebafb01fe3f5aca8ca03c9cf281d49d2c637",
    "robotsix-llmio @ git+https://github.com/damien-robotsix/robotsix-llmio.git@2fd2be4dcf7f0a44e91012fd1167517e5e09180e",
]

[project.optional-dependencies]
# The LLM cost-analyst (optional — the dashboard + reconciliation work without it).
# robotsix-llmio is already a core dependency; the analyst extra adds its
# openrouter + claude_sdk extras, plus robotsix-agent-comm for the
# pull/mailbox client that files board tickets through the central broker.
analyst = [
    "robotsix-llmio[openrouter,claude_sdk] @ git+https://github.com/damien-robotsix/robotsix-llmio.git@2fd2be4dcf7f0a44e91012fd1167517e5e09180e",
    "robotsix-agent-comm @ git+https://github.com/damien-robotsix/robotsix-agent-comm.git@c57e9d7483f3e283d3e421cd24b60f0a442971c9",
]

[project.scripts]
robotsix-cost-monitor = "robotsix_cost_monitor.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.13",
    "vulture>=2.11",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_cost_monitor"]

# Allow the direct git references for robotsix-llmio (core dep) and
# robotsix-agent-comm (optional `analyst` extra).
[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# GHSA-4xgf-cpjx-pc3j: pydantic-settings <2.14.2 allows symlink traversal
# outside secrets_dir.  Force the fixed version for all transitive dependants
# (currently mcp → claude-agent-sdk → robotsix-llmio[claude_sdk]).
constraint-dependencies = ["pydantic-settings>=2.14.2"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]
"tests/test_routes.py" = ["S", "E501", "I001", "E402"]
"vulture_whitelist.py" = ["B018", "F821"]
"src/robotsix_cost_monitor/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

# Optional `analyst` extra — lazy-imported inside analyst.py, not installed in
# the base/dev env, so don't fail typecheck on missing stubs.
[[tool.mypy.overrides]]
module = [
    "robotsix_llmio.*",
    "robotsix_agent_comm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vulture_whitelist"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
