[project]
name = "robotsix-cost-monitor"
version = "0.1.0"
description = "Multi-Langfuse cost monitoring dashboard, OpenRouter↔Langfuse reconciliation, and an LLM cost-reduction analyst."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgi-correlation-id>=4.3",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "structlog>=24.1",
    "robotsix-config @ git+https://github.com/damien-robotsix/robotsix-config.git@358da8b9c66f1dd52b85854ceabfffdc35229e63",
    "robotsix-http @ git+https://github.com/damien-robotsix/robotsix-http.git@4cf79993f07c0d56e50cf02af816058144beacb9",
    "robotsix-llmio @ git+https://github.com/damien-robotsix/robotsix-llmio.git@2fd2be4dcf7f0a44e91012fd1167517e5e09180e",
]

[project.optional-dependencies]
analyst = [
    "robotsix-llmio[openrouter,claude_sdk] @ git+https://github.com/damien-robotsix/robotsix-llmio.git@2fd2be4dcf7f0a44e91012fd1167517e5e09180e",
]

[project.scripts]
robotsix-cost-monitor = "robotsix_cost_monitor.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.1",
    "respx>=0.22",
    "robotsix-modules",
    "ruff>=0.15.20",
    "mypy>=2.3.0,<3",
]
lint = [
    "ruff>=0.15.20",
    "mypy>=2.3.0",
    "vulture>=2.11",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_cost_monitor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git" }

[tool.uv]
constraint-dependencies = ["pydantic-settings>=2.14.2"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "D"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501", "D"]
"tests/test_routes.py" = ["S", "E501", "I001", "E402"]
"vulture_whitelist.py" = ["B018", "F821"]
"src/robotsix_cost_monitor/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
mypy_path = "tests"

[[tool.mypy.overrides]]
module = [
    "robotsix_llmio.*",
    "robotsix_http.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vulture_whitelist"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "robotsix_cost_monitor.test_analyst",
    "robotsix_cost_monitor.test_reconcile",
    "robotsix_cost_monitor.test_routes",
    "robotsix_cost_monitor.clients.test_langfuse",
]
disable_error_code = ["no-untyped-def"]
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.deptry]
extend_exclude = ["scripts/validate_modules.py", "scripts/generate_config_schema.py"]
known_first_party = ["robotsix_cost_monitor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
